tm/tests/snapshots/tui_today_daybar__hovering_a_column_gives_the_spec_tooltip.snap
---
source: tm/tests/tui_today_daybar.rs
expression: "daybar::tooltip(&bar, bar.cursor_col).expect(\"tooltip\")"
---
Exercises 5.3–5.5 · 1h48m · ci4 · p1 · @O1
