tm/tests/snapshots/tui_today_daybar__the_cells_at_the_configured_minimum_width.snap
---
source: tm/tests/tui_today_daybar.rs
expression: "render_bar(&app(), 110)"
---
"   █████████░░███████▒▒▓▓▓▓████░▓▓▓▓░░       ▒▒▒∙∙∙∙         ███                                  ▲ 10:42     "
"   █████████░░███████▒▒▓▓▓▓                                                                       plan @07:00 "
