tm/tests/snapshots/tui_today_daybar__the_two_rows_of_cells.snap
---
source: tm/tests/tui_today_daybar.rs
expression: "render_bar(&app(), 120)"
---
"    █████████░░░███████▒▒▓▓▓▓▓████░░▓▓▓▓░░        ▒▒▒∙∙∙∙∙          ███                                     ▲ 10:42     "
"    █████████░░████████▒▒▓▓▓▓▓                                                                              plan @07:00 "
